fixed layout issues

--- a/style.css
+++ b/style.css
@@ -2,12 +2,14 @@
 
 body {
   font-family: "Lato", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 h2 {
   font-size: 26px;
   font-weight: 400;
-  margin: 0 10px 10px 10px;
+  margin: 0 10px 10px 10px; /* added margin and text-align */
   text-align: center;
 }
 
@@ -31,14 +33,17 @@ section.alternate-background {
 }
 
 main img {
-  width: 100px;
+  max-width: 100%; /* Use max-width instead of width */
 }
 
 /* ---  Groups & Items --- */
 
 .group {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  max-width: 100%; /* Ensure the group doesn't exceed the viewport width */
 }
 
 .item {
@@ -64,6 +69,14 @@ header {
   color: #fff;
 }
 
+/* added header nav ul */
+header nav ul {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 20px;
+  flex-wrap: wrap;
+}
+
 header nav ul li {
   list-style-type: none;
 }
@@ -83,19 +96,31 @@ header nav ul li a:hover {
 form {
   border: 2px solid #ff385c;
   padding: 10px;
+  justify-content: center;
+}
+
+/* added form div */
+form div {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
 
 form label {
   font-weight: bold;
+  flex: 1;
 }
 
 form select,
 form input {
-  margin-bottom: 20px;
-  width: 180px;
+  flex: 2;
+  margin-bottom: 10px;
+  width: 90%;
 }
 
 form button {
+  flex: 1;
   background-color: #ff385c;
   border: none;
   color: #fff;
@@ -117,3 +142,89 @@ footer p {
 }
 
 /* -------  Media Query ------- */
+
+@media all and (min-width: 680px) {
+  body {
+    display: grid;
+  }
+
+  main {
+    max-width: 100vw; /* Ensure the main container doesn't exceed the viewport width */
+  }
+
+  .group {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 100%; /* Ensure the group doesn't exceed the viewport width */
+  }
+
+  p {
+    font-size: 24px;
+  }
+
+  header {
+    display: flex;
+  }
+
+  header nav {
+    flex: 1;
+  }
+
+  header nav ul {
+    justify-content: right;
+  }
+
+  form {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-direction: wrap;
+  }
+
+  form div {
+    flex: 1;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  form button {
+    flex: 1;
+  }
+
+  #ideas .group {
+    min-height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+
+  #ideas .item {
+    display: flex;
+    flex-basis: calc(50% - 40px);
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .host .group {
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+
+@media all and (max-width: 680px) {
+  #about .group,
+  #ideas .group,
+  #host .group {
+    flex-direction: column;
+  }
+
+  #about .item,
+  #ideas .item,
+  #host .item {
+    flex: 0 1 100%;
+    margin: 10px 0;
+  }
+}
